Flicker render fix

--- a/frontend/app/styles/main.scss
+++ b/frontend/app/styles/main.scss
@@ -90,3 +90,14 @@ body {
     border-bottom: 0;
   }
 }
+
+/* The starting CSS styles for the enter animation */
+.ngfade.ng-enter {
+    transition:0.5s linear all;
+    opacity:0;
+}
+
+/* The finishing CSS styles for the enter animation */
+.ngfade.ng-enter.ng-enter-active {
+    opacity:1;
+}
